# observable-properties-python

./: README.md  build.cmd  pyproject.toml  test-deploy.cmd
example/: example.py
src/: observable_properties.py
tests/: tests.py
